fix nav on smaller screens for 08 layout

--- a/08-practice-start/styles.css
+++ b/08-practice-start/styles.css
@@ -41,7 +41,16 @@ body {
 nav {
     /* Flex here*/
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center;
+}
+
+/* +768px */
+@media screen and (min-width:768px) {
+    nav {
+        flex-direction: row;
+    }
 }
 
 nav a {
